--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="mc-layout" mc-layout-size="normal">
           <div class="mc-card" >
             <div class="mc-content" >
-              <p class="mc-text">Down here is a Dp generator that watermarks CDC with your picture.</p>
+              <p class="mc-text">Down here is a Dp generator that watermarks CoderDojo with your picture.</p>
             </div>
           </div>
         </div>
